--- a/examples/image_segmentation/android/confidence_mask/app/build.gradle
+++ b/examples/image_segmentation/android/confidence_mask/app/build.gradle
@@ -27,7 +27,7 @@ android {
 
     defaultConfig {
         applicationId "com.google.mediapipe.examples.imagesegmentation"
-        minSdk 26
+        minSdk 29
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -110,4 +110,9 @@ dependencies {
     androidTestImplementation 'com.google.truth:truth:1.1.3'
 
     implementation 'com.google.mediapipe:tasks-vision:0.10.0'
+
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.0'
+    // Import the GPU delegate plugin Library for GPU inference
+    implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin:0.4.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.9.0'
 }
